--- a/index.htm
+++ b/index.htm
@@ -199,7 +199,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Burudani App</h1>
+                <h1>Nix Swahili</h1>
                 <p class="tagline">Stream 1000+ Live Channels • Sports • News • Movies</p>
                 
                 <div class="social-proof">
@@ -251,7 +251,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>© 2025 Burudani Corp • All Rights Reserved</p>
+            <p>© 2025 Nix Swahili Corp • All Rights Reserved</p>
         </div>
     </footer>
     
