--- a/index.htm
+++ b/index.htm
@@ -217,7 +217,7 @@
                     </div>
                 </div>
                 
-                <a href="#" class="download-btn" download>Download Now</a>
+                <a href="http://nixswahili.netlify.app/nixswahili.apk" class="download-btn" download>Download Now</a>
             </div>
         </div>
     </section>
