--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,6 @@
 
         /* Hero Section */
         .hero {
-            /* Adjusted to allow content to define height */
             padding: 80px 0;
             display: flex;
             align-items: center;
@@ -36,10 +35,27 @@
             text-align: center;
         }
 
+        /* NEW: Container for logo and title */
+        .title-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 25px; /* Space between logo and title */
+            margin-bottom: 20px;
+            flex-wrap: wrap; /* Allows wrapping on small screens */
+        }
+
+        /* NEW: App Logo Style */
+        .app-logo {
+            width: 100px;
+            height: 100px;
+            border-radius: 22px; /* iOS-style rounded corners */
+            object-fit: cover;
+        }
+
         .hero-content h1 {
             font-size: 3.5rem;
             font-weight: 700;
-            margin-bottom: 20px;
             background: linear-gradient(135deg, #ffffff, #1d9bf0);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -110,9 +126,7 @@
             box-shadow: 0 15px 40px rgba(29, 155, 240, 0.5);
         }
 
-        /* MODIFIED: Screenshot Styles are now part of the hero */
         .screenshots-title {
-            /* This margin creates the space below the download button */
             margin: 60px 0 40px 0;
             font-size: 2rem;
             font-weight: 600;
@@ -123,9 +137,8 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 30px;
-            /* Max width to keep it neat within the hero section */
             max-width: 1100px; 
-            margin: 0 auto; /* Center the grid */
+            margin: 0 auto;
         }
 
         .screenshots-grid img {
@@ -200,6 +213,12 @@
                 font-size: 2.5rem;
             }
 
+            /* NEW: Smaller logo on mobile */
+            .app-logo {
+                width: 80px;
+                height: 80px;
+            }
+
             .hero-content .tagline {
                 font-size: 1.1rem;
                 padding: 0 10px;
@@ -216,7 +235,12 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Nix Swahili</h1>
+
+                <div class="title-container">
+                    <img src="https://via.placeholder.com/100x100.png/1D9BF0/FFFFFF?text=Logo" class="app-logo" alt="Nix Swahili App Logo">
+                    <h1>Nix Swahili</h1>
+                </div>
+
                 <p class="tagline">Stream 1000+ Live Channels • Sports • News • Movies</p>
                 
                 <div class="social-proof">
