--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
             background: #0a0a0a;
             color: #e5e5e5;
             line-height: 1.6;
-            overflow-x: hidden;
+            overflow-x: hidden; /* This prevents horizontal scrolling */
         }
 
         .container {
@@ -28,28 +28,26 @@
 
         /* Hero Section */
         .hero {
-            padding: 80px 0;
+            padding: 60px 0; /* Adjusted padding */
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
         }
 
-        /* NEW: Container for logo and title */
         .title-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 25px; /* Space between logo and title */
+            gap: 20px; /* Adjusted gap */
             margin-bottom: 20px;
-            flex-wrap: wrap; /* Allows wrapping on small screens */
+            flex-wrap: wrap; 
         }
 
-        /* NEW: App Logo Style */
         .app-logo {
             width: 100px;
             height: 100px;
-            border-radius: 22px; /* iOS-style rounded corners */
+            border-radius: 22px; 
             object-fit: cover;
         }
 
@@ -60,6 +58,8 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            /* ADDED: Prevents text from creating overflow */
+            word-break: break-word;
         }
 
         .hero-content .tagline {
@@ -135,8 +135,9 @@
 
         .screenshots-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
+            /* CHANGED: Made the min value smaller for better fit */
+            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+            gap: 20px; /* Adjusted gap */
             max-width: 1100px; 
             margin: 0 auto;
         }
@@ -210,10 +211,10 @@
         /* Mobile Optimizations */
         @media (max-width: 768px) {
             .hero-content h1 {
-                font-size: 2.5rem;
+                /* CHANGED: Reduced font size significantly for tablets and large phones */
+                font-size: 2.8rem; 
             }
 
-            /* NEW: Smaller logo on mobile */
             .app-logo {
                 width: 80px;
                 height: 80px;
@@ -227,6 +228,26 @@
             .download-btn {
                 padding: 16px 35px;
                 font-size: 1.1rem;
+            }
+        }
+        
+        /* ADDED: New media query for very small mobile screens */
+        @media (max-width: 480px) {
+            .hero-content h1 {
+                /* CHANGED: Further reduced font size for small phones */
+                font-size: 2.2rem; 
+            }
+
+            .title-container {
+                gap: 15px; /* Smaller gap on small screens */
+            }
+
+            .social-proof {
+                gap: 15px; /* Reduce gap to prevent wrapping if possible */
+            }
+
+            .screenshots-title {
+                font-size: 1.8rem;
             }
         }
     </style>
@@ -254,7 +275,7 @@
                     </div>
                     <div class="proof-item">
                         <span class="age-rating">Rated for 3+</span>
-                         <span class="label">Age Rating</span>
+                        <span class="label">Age Rating</span>
                     </div>
                 </div>
                 
