--- a/index.htm
+++ b/index.htm
@@ -256,7 +256,7 @@
             <div class="hero-content">
 
                 <div class="title-container">
-                    <img src="https://via.placeholder.com/100x100.png/1D9BF0/FFFFFF?text=Logo" class="app-logo" alt="Nix Swahili App Logo">
+                    <img src="https://imgur.com/a/dstoKNH" class="app-logo" alt="Nix Swahili App Logo">
                     <h1>Nix Swahili</h1>
                 </div>
 
