--- a/index.htm
+++ b/index.htm
@@ -281,7 +281,7 @@
                 
                 <h2 class="screenshots-title">Screenshots</h2>
                 <div class="screenshots-grid">
-                    <img src="https://via.placeholder.com/280x560.png/0A0A0A/FFFFFF?text=Screenshot+1" alt="Nix Swahili App Screenshot 1">
+                    <img src="https://i.postimg.cc/nzd8gg9F/20250827-1101-Nix-Swahili-Sports-Mockup-remix-01k3paya2zfz4tg0gnf618swy4.png" alt="Nix Swahili App Screenshot 1">
                     <img src="https://via.placeholder.com/280x560.png/0A0A0A/FFFFFF?text=Screenshot+2" alt="Nix Swahili App Screenshot 2">
                     <img src="https://via.placeholder.com/280x560.png/0A0A0A/FFFFFF?text=Screenshot+3" alt="Nix Swahili App Screenshot 3">
                     <img src="https://via.placeholder.com/280x560.png/0A0A0A/FFFFFF?text=Screenshot+4" alt="Nix Swahili App Screenshot 4">
