--- a/index.htm
+++ b/index.htm
@@ -256,7 +256,7 @@
             <div class="hero-content">
 
                 <div class="title-container">
-                    <img src="https://imgur.com/a/dstoKNH" class="app-logo" alt="Nix Swahili App Logo">
+                    <img src="https://i.postimg.cc/nzd8gg9F/20250827-1101-Nix-Swahili-Sports-Mockup-remix-01k3paya2zfz4tg0gnf618swy4.png" class="app-logo" alt="Nix Swahili App Logo">
                     <h1>Nix Swahili</h1>
                 </div>
 
