--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
             background: #0a0a0a;
             color: #e5e5e5;
             line-height: 1.6;
-            overflow-x: hidden; /* This prevents horizontal scrolling */
+            overflow-x: hidden; /* This prevents horizontal scrolling on the page */
         }
 
         .container {
@@ -30,7 +30,7 @@
 
         /* Hero Section */
         .hero {
-            padding: 60px 0; /* Adjusted padding */
+            padding: 60px 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -41,7 +41,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 20px; /* Adjusted gap */
+            gap: 20px;
             margin-bottom: 20px;
             flex-wrap: wrap; 
         }
@@ -60,7 +60,7 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            word-break: break-word; /* Prevents text from creating overflow */
+            word-break: break-word;
         }
 
         .hero-content .tagline {
@@ -128,22 +128,31 @@
         }
 
         .screenshots-title {
-            margin: 60px 0 40px 0;
+            margin: 60px 0 20px 0; /* Adjusted bottom margin */
             font-size: 2rem;
             font-weight: 600;
             color: #ffffff;
         }
 
+        /* --- NEW HORIZONTAL SCROLL STYLES --- */
         .screenshots-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+            display: flex;
+            overflow-x: auto; /* This enables horizontal scrolling */
             gap: 20px;
-            max-width: 1100px; 
-            margin: 0 auto;
+            padding: 20px 0;
+            /* For smooth scrolling on touch devices */
+            -webkit-overflow-scrolling: touch; 
+            /* Hides the scrollbar for a cleaner look */
+            scrollbar-width: none; /* Firefox */
+        }
+        .screenshots-grid::-webkit-scrollbar {
+            display: none; /* Chrome, Safari, Opera */
         }
 
         .screenshots-grid img {
-            width: 100%;
+            width: 260px; /* A fixed width for each screenshot */
+            height: auto; /* Maintain aspect ratio */
+            flex-shrink: 0; /* Prevents images from shrinking */
             border-radius: 15px;
             border: 2px solid rgba(255, 255, 255, 0.1);
             transition: transform 0.3s ease;
@@ -230,7 +239,6 @@
             }
         }
         
-        /* New media query for very small mobile screens */
         @media (max-width: 480px) {
             .hero-content h1 {
                 font-size: 2.2rem; 
@@ -280,11 +288,11 @@
                 <a href="https://nixswahili.netlify.app/nixswahili.apk" class="download-btn" download>Download Now</a>
                 
                 <h2 class="screenshots-title">Screenshots</h2>
+                <!-- === SCREENSHOTS SECTION UPDATED HERE === -->
                 <div class="screenshots-grid">
-                    <img src="https://i.postimg.cc/nzd8gg9F/20250827-1101-Nix-Swahili-Sports-Mockup-remix-01k3paya2zfz4tg0gnf618swy4.png" alt="Nix Swahili App Screenshot 1">
-                    <img src="https://via.placeholder.com/280x560.png/0A0A0A/FFFFFF?text=Screenshot+2" alt="Nix Swahili App Screenshot 2">
-                    <img src="https://via.placeholder.com/280x560.png/0A0A0A/FFFFFF?text=Screenshot+3" alt="Nix Swahili App Screenshot 3">
-                    <img src="https://via.placeholder.com/280x560.png/0A0A0A/FFFFFF?text=Screenshot+4" alt="Nix Swahili App Screenshot 4">
+                    <img src="https://i.postimg.cc/HWQvrfkV/20250827-1131-Nix-Swahili-App-Mockup-remix-01k3pckfa0fqasmmctf0amfsaq.png" alt="Nix Swahili App Interface">
+                    <img src="https://i.postimg.cc/L5BxGZbz/20250827-1122-Sports-Streaming-Mockup-remix-01k3pc4bcyf3m9brwx09x3h9rj.png" alt="Nix Swahili Live Sports">
+                    <img src="https://i.postimg.cc/nzd8gg9F/20250827-1101-Nix-Swahili-Sports-Mockup-remix-01k3paya2zfz4tg0gnf618swy4.png" alt="Nix Swahili Sports Channels">
                 </div>
             </div>
         </div>
