--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
       background: #0a0a0a;
       color: #e5e5e5;
       line-height: 1.6;
-      overflow-x: hidden;
+      overflow-x: hidden; /* Prevents unwanted page-level horizontal scroll */
     }
 
     .container {
@@ -132,21 +132,21 @@
       color: #ffffff;
     }
 
-    /* --- UPDATED HORIZONTAL SCROLL STYLES --- */
+    /* --- FIXED HORIZONTAL SCROLL STYLES --- */
     .screenshots-grid {
       display: flex;
-      overflow-x: auto;       /* horizontal scroll */
+      overflow-x: auto !important;  /* ✅ Force horizontal scroll allowed */
       gap: 20px;
       margin: 0 -20px;
-      padding: 20px 10px;     /* small side padding for mobile */
+      padding: 20px 10px;
       -webkit-overflow-scrolling: touch; 
-      scrollbar-width: none;  /* Firefox */
+      scrollbar-width: none;
 
-      scroll-snap-type: x mandatory; /* enable snapping */
-      scroll-behavior: smooth;       /* smooth scroll */
+      scroll-snap-type: x mandatory; /* Snap horizontally */
+      scroll-behavior: smooth;       /* Smooth scroll */
     }
     .screenshots-grid::-webkit-scrollbar {
-      display: none; /* hide scrollbar */
+      display: none; /* Hide scrollbar */
     }
 
     .screenshots-grid img {
@@ -157,7 +157,7 @@
       border: 2px solid rgba(255, 255, 255, 0.1);
       transition: transform 0.3s ease;
 
-      scroll-snap-align: start; /* each image snaps to start */
+      scroll-snap-align: start; /* Snap image into view */
     }
     
     .screenshots-grid img:hover {
