--- a/index.htm
+++ b/index.htm
@@ -282,7 +282,7 @@
           </div>
         </div>
 
-        <a href="https://nixswahili.netlify.app/nixswahili.apk" class="download-btn" download>Download Now</a>
+        <a href="https://github.com/dsillydude/nixswahili/releases/download/nixapp/nixswahili.apk" class="download-btn" download>Download Now</a>
 
         <h2 class="screenshots-title">Screenshots</h2>
         <!-- Swiper Screenshots -->
