--- a/index.htm
+++ b/index.htm
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Nix Swahili - Stream Live TV, Sports & Movies</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nix Swahili – Watch Live TV, Sports & Movies</title>
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Swiper -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      font-family: 'Inter', sans-serif;
       background: #0a0a0a;
       color: #e5e5e5;
       line-height: 1.6;
@@ -22,16 +23,13 @@
 
     .container {
       max-width: 1200px;
-      margin: 0 auto;
+      margin: auto;
       padding: 0 20px;
     }
 
-    /* Hero Section */
+    /* HERO */
     .hero {
-      padding: 60px 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      padding: 80px 0;
       text-align: center;
     }
 
@@ -40,324 +38,246 @@
       justify-content: center;
       align-items: center;
       gap: 20px;
-      margin-bottom: 20px;
       flex-wrap: wrap;
+      margin-bottom: 20px;
     }
 
     .app-logo {
-      width: 120px;
-      height: 120px;
-      border-radius: 22px;
-      object-fit: cover;
+      width: 110px;
+      height: 110px;
+      border-radius: 24px;
     }
 
-    .hero-content h1 {
+    h1 {
       font-size: 3.5rem;
       font-weight: 700;
       background: linear-gradient(135deg, #ffffff, #1d9bf0);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      background-clip: text;
-      word-break: break-word;
     }
 
-    .hero-content .tagline {
+    .tagline {
       font-size: 1.3rem;
       color: #b0b0b0;
       margin-bottom: 30px;
-      font-weight: 400;
     }
 
+    /* SOCIAL PROOF */
     .social-proof {
       display: flex;
       justify-content: center;
-      align-items: center;
-      gap: 20px;
-      margin-bottom: 40px;
-      color: #b0b0b0;
+      gap: 25px;
       flex-wrap: wrap;
+      margin-bottom: 40px;
     }
 
     .proof-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       text-align: center;
     }
 
     .proof-item .value {
-      font-size: 1.1rem;
       font-weight: 600;
       color: #ffffff;
     }
 
-    .proof-item .label {
-      font-size: 0.9rem;
-    }
-
-    .stars {
-      color: #1d9bf0;
-    }
+    .stars { color: #1d9bf0; }
 
     .age-rating {
-      border: 1px solid #b0b0b0;
-      padding: 2px 8px;
-      border-radius: 4px;
+      border: 1px solid #777;
+      padding: 3px 10px;
+      border-radius: 5px;
       font-size: 0.9rem;
-      font-weight: 500;
     }
 
-    .download-btn {
-      display: inline-block;
-      background: linear-gradient(135deg, #1d9bf0, #4cafef);
-      color: white;
-      text-decoration: none;
-      padding: 18px 40px;
-      border-radius: 50px;
-      font-size: 1.2rem;
-      font-weight: 600;
-      box-shadow: 0 10px 30px rgba(29, 155, 240, 0.3);
-      transition: all 0.3s ease;
+    /* PLAY STORE CTA */
+    .cta {
+      margin: 40px 0 20px;
     }
 
-    .download-btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 15px 40px rgba(29, 155, 240, 0.5);
+    .playstore-badge {
+      height: 64px;
+      transition: transform 0.3s ease;
     }
 
+    .playstore-badge:hover {
+      transform: scale(1.05);
+    }
+
+    .cta-note {
+      margin-top: 12px;
+      font-size: 0.9rem;
+      color: #888;
+    }
+
+    /* SCREENSHOTS */
     .screenshots-title {
-      margin: 60px 0 20px 0;
+      margin: 70px 0 20px;
       font-size: 2rem;
       font-weight: 600;
-      color: #ffffff;
     }
 
-    /* --- Swiper Screenshots --- */
     .swiper {
       padding: 20px 0;
     }
 
-    .swiper-slide {
-      width: auto;
-      display: flex;
-      justify-content: center;
-    }
-
     .swiper-slide img {
-      width: 300px; /* larger size */
-      max-width: 100%;
-      height: auto;
-      border-radius: 15px;
-      border: 2px solid rgba(255, 255, 255, 0.1);
-      transition: transform 0.3s ease;
+      width: 300px;
+      border-radius: 16px;
+      border: 2px solid rgba(255,255,255,0.08);
     }
 
-    .swiper-slide img:hover {
-      transform: scale(1.03);
-    }
-
-    /* Features Section */
+    /* FEATURES */
     .features {
       padding: 80px 0;
-      background: linear-gradient(180deg, #0a0a0a 0%, #111111 100%);
+      background: linear-gradient(180deg, #0a0a0a, #111);
     }
 
     .features-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 30px;
-      margin-top: 60px;
     }
 
     .feature-card {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(29, 155, 240, 0.2);
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(29,155,240,0.25);
       border-radius: 20px;
       padding: 30px;
       text-align: center;
-      transition: all 0.3s ease;
       backdrop-filter: blur(10px);
     }
 
-    .feature-card .emoji {
-      font-size: 3rem;
-      margin-bottom: 20px;
+    .feature-card span {
+      font-size: 2.8rem;
       display: block;
+      margin-bottom: 15px;
     }
 
     .feature-card h3 {
-      font-size: 1.3rem;
-      font-weight: 600;
-      color: #ffffff;
       margin-bottom: 10px;
+      color: #fff;
     }
 
     .feature-card p {
       color: #b0b0b0;
-      font-size: 1rem;
-      line-height: 1.5;
     }
 
-    /* Footer */
-    .footer {
+    /* FOOTER */
+    footer {
       padding: 40px 0;
       text-align: center;
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
       background: #050505;
-    }
-
-    .footer p {
-      color: #808080;
+      border-top: 1px solid rgba(255,255,255,0.08);
+      color: #777;
       font-size: 0.9rem;
     }
 
-    /* Mobile Optimizations */
+    /* MOBILE */
     @media (max-width: 768px) {
-      .hero-content h1 {
-        font-size: 2.8rem;
-      }
-
-      .app-logo {
-        width: 90px;
-        height: 90px;
-      }
-
-      .hero-content .tagline {
-        font-size: 1.1rem;
-        padding: 0 10px;
-      }
-
-      .download-btn {
-        padding: 16px 35px;
-        font-size: 1.1rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .hero-content h1 {
-        font-size: 2.2rem;
-      }
-
-      .title-container {
-        gap: 15px;
-      }
-
-      .social-proof {
-        gap: 15px;
-      }
-
-      .screenshots-title {
-        font-size: 1.8rem;
-      }
-
-      .swiper-slide img {
-        width: 90vw; /* expand on small screens */
-      }
+      h1 { font-size: 2.6rem; }
+      .tagline { font-size: 1.1rem; }
+      .swiper-slide img { width: 85vw; }
     }
   </style>
 </head>
+
 <body>
-  <section class="hero">
-    <div class="container">
-      <div class="hero-content">
-        <div class="title-container">
-          <img src="https://i.postimg.cc/hvqCC0pD/20250828-1527-Futuristic-Streaming-App-Icon-remix-01k3sckjvfe1r82p5ye68w01sp.png" class="app-logo" alt="Nix Swahili App Logo">
-          <h1>Nix Swahili</h1>
-        </div>
 
-        <p class="tagline">Stream 1000+ Live Channels • Sports • News • Movies</p>
+<section class="hero">
+  <div class="container">
+    <div class="title-container">
+      <img class="app-logo"
+        src="https://i.postimg.cc/hvqCC0pD/20250828-1527-Futuristic-Streaming-App-Icon-remix-01k3sckjvfe1r82p5ye68w01sp.png"
+        alt="Nix Swahili App Logo">
+      <h1>Nix Swahili</h1>
+    </div>
 
-        <div class="social-proof">
-          <div class="proof-item">
-            <span class="value stars">★★★★☆</span>
-            <span class="label">1.2M reviews</span>
-          </div>
-          <div class="proof-item">
-            <span class="value">10M+</span>
-            <span class="label">downloads</span>
-          </div>
-          <div class="proof-item">
-            <span class="age-rating">Rated for 3+</span>
-            <span class="label">Age Rating</span>
-          </div>
-        </div>
+    <p class="tagline">Stream Live TV • Sports • Movies • News</p>
 
-        <a href="https://github.com/dsillydude/nixswahili/releases/download/nixapp/nixswahili.apk" class="download-btn" download>Download Now</a>
-
-        <h2 class="screenshots-title">Screenshots</h2>
-        <!-- Swiper Screenshots -->
-        <div class="swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img src="https://i.postimg.cc/HWQvrfkV/20250827-1131-Nix-Swahili-App-Mockup-remix-01k3pckfa0fqasmmctf0amfsaq.png" alt="Nix Swahili App Interface">
-            </div>
-            <div class="swiper-slide">
-              <img src="https://i.postimg.cc/L5BxGZbz/20250827-1122-Sports-Streaming-Mockup-remix-01k3pc4bcyf3m9brwx09x3h9rj.png" alt="Nix Swahili Live Sports">
-            </div>
-            <div class="swiper-slide">
-              <img src="https://i.postimg.cc/nzd8gg9F/20250827-1101-Nix-Swahili-Sports-Mockup-remix-01k3paya2zfz4tg0gnf618swy4.png" alt="Nix Swahili Sports Channels">
-            </div>
-          </div>
-          <!-- Navigation + Pagination -->
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-pagination"></div>
-        </div>
+    <div class="social-proof">
+      <div class="proof-item">
+        <div class="value stars">★★★★☆</div>
+        <div>1.2M reviews</div>
+      </div>
+      <div class="proof-item">
+        <div class="value">10M+</div>
+        <div>Downloads</div>
+      </div>
+      <div class="proof-item">
+        <div class="age-rating">Rated 3+</div>
+        <div>Age Rating</div>
       </div>
     </div>
-  </section>
 
-  <section class="features">
-    <div class="container">
-      <div class="features-grid">
-        <div class="feature-card">
-          <span class="emoji">📺</span>
-          <h3>6000+ Live TV Channels</h3>
-          <p>Access thousands of live television channels from around the world in HD quality</p>
+    <!-- PLAY STORE CTA -->
+    <div class="cta">
+      <a href="https://play.google.com/store/apps/details?id=com.nixswahili.app" target="_blank" rel="noopener">
+        <img class="playstore-badge"
+          src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png"
+          alt="Get it on Google Play">
+      </a>
+      <div class="cta-note">Available exclusively on Google Play</div>
+    </div>
+
+    <h2 class="screenshots-title">App Screenshots</h2>
+
+    <!-- Screenshots -->
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="https://i.postimg.cc/HWQvrfkV/20250827-1131-Nix-Swahili-App-Mockup-remix-01k3pckfa0fqasmmctf0amfsaq.png">
         </div>
-        <div class="feature-card">
-          <span class="emoji">⚽</span>
-          <h3>Sports, Music & News</h3>
-          <p>Watch live sports, music concerts, and breaking news in multiple languages</p>
+        <div class="swiper-slide">
+          <img src="https://i.postimg.cc/L5BxGZbz/20250827-1122-Sports-Streaming-Mockup-remix-01k3pc4bcyf3m9brwx09x3h9rj.png">
         </div>
-        <div class="feature-card">
-          <span class="emoji">🎬</span>
-          <h3>Movies & Entertainment</h3>
-          <p>Enjoy the latest movies, TV shows, and entertainment content on demand</p>
-        </div>
-        <div class="feature-card">
-          <span class="emoji">✨</span>
-          <h3>Simple & User-Friendly</h3>
-          <p>Intuitive interface designed for easy navigation and seamless streaming experience</p>
+        <div class="swiper-slide">
+          <img src="https://i.postimg.cc/nzd8gg9F/20250827-1101-Nix-Swahili-Sports-Mockup-remix-01k3paya2zfz4tg0gnf618swy4.png">
         </div>
       </div>
+      <div class="swiper-pagination"></div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer class="footer">
-    <div class="container">
-      <p>© 2025 Nix Swahili Corp • All Rights Reserved</p>
+<section class="features">
+  <div class="container">
+    <div class="features-grid">
+      <div class="feature-card">
+        <span>📺</span>
+        <h3>6000+ Live Channels</h3>
+        <p>Watch live TV from around the world in HD quality.</p>
+      </div>
+      <div class="feature-card">
+        <span>⚽</span>
+        <h3>Live Sports</h3>
+        <p>Football, leagues, events & highlights.</p>
+      </div>
+      <div class="feature-card">
+        <span>🎬</span>
+        <h3>Movies & Series</h3>
+        <p>Enjoy premium entertainment on demand.</p>
+      </div>
+      <div class="feature-card">
+        <span>✨</span>
+        <h3>Easy to Use</h3>
+        <p>Clean, fast & optimized for Android devices.</p>
+      </div>
     </div>
-  </footer>
+  </div>
+</section>
 
-  <!-- Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>
-    const swiper = new Swiper('.swiper', {
-      slidesPerView: 'auto',
-      spaceBetween: 5,
-      grabCursor: true,
-      centeredSlides: false,
-      freeMode: false,
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
-      },
-      navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev',
-      },
-    });
-  </script>
+<footer>
+  © 2025 Nix Swahili • Available on Google Play
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  new Swiper('.swiper', {
+    slidesPerView: 'auto',
+    spaceBetween: 10,
+    pagination: { el: '.swiper-pagination', clickable: true }
+  });
+</script>
+
 </body>
 </html>
