--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nix Swahili – Watch Live TV, Sports & Movies</title>
+  <title>Nix Swahili – Download & Stream Live TV</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -89,9 +89,16 @@
       font-size: 0.9rem;
     }
 
-    /* PLAY STORE CTA */
+    /* CTA */
     .cta {
       margin: 40px 0 20px;
+    }
+
+    .download-text {
+      font-size: 1.4rem;
+      font-weight: 600;
+      margin-bottom: 12px;
+      color: #ffffff;
     }
 
     .playstore-badge {
@@ -209,14 +216,23 @@
       </div>
     </div>
 
-    <!-- PLAY STORE CTA -->
+    <!-- DOWNLOAD CTA -->
     <div class="cta">
-      <a href="https://play.google.com/store/apps/details?id=com.nixswahili.app" target="_blank" rel="noopener">
+      <div class="download-text">Download Nix Swahili</div>
+
+      <a href="https://play.google.com/store/apps/details?id=com.nixswahili.app"
+         target="_blank"
+         rel="noopener"
+         aria-label="Download Nix Swahili on Google Play">
+
         <img class="playstore-badge"
           src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png"
-          alt="Get it on Google Play">
+          alt="Download on Google Play">
       </a>
-      <div class="cta-note">Available exclusively on Google Play</div>
+
+      <div class="cta-note">
+        Official download via Google Play Store
+      </div>
     </div>
 
     <h2 class="screenshots-title">App Screenshots</h2>
@@ -245,29 +261,29 @@
       <div class="feature-card">
         <span>📺</span>
         <h3>6000+ Live Channels</h3>
-        <p>Watch live TV from around the world in HD quality.</p>
+        <p>Watch live television from around the world in HD.</p>
       </div>
       <div class="feature-card">
         <span>⚽</span>
         <h3>Live Sports</h3>
-        <p>Football, leagues, events & highlights.</p>
+        <p>Football, leagues, matches & highlights.</p>
       </div>
       <div class="feature-card">
         <span>🎬</span>
         <h3>Movies & Series</h3>
-        <p>Enjoy premium entertainment on demand.</p>
+        <p>Stream premium entertainment anytime.</p>
       </div>
       <div class="feature-card">
         <span>✨</span>
         <h3>Easy to Use</h3>
-        <p>Clean, fast & optimized for Android devices.</p>
+        <p>Fast, simple & optimized for Android.</p>
       </div>
     </div>
   </div>
 </section>
 
 <footer>
-  © 2025 Nix Swahili • Available on Google Play
+  © 2025 Nix Swahili • Download on Google Play
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
