--- a/index.htm
+++ b/index.htm
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nix Swahili – Download & Stream Live TV</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Nix Swahili - Stream Live TV, Sports & Movies</title>
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-  <!-- Swiper -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
   <style>
@@ -23,13 +20,15 @@
 
     .container {
       max-width: 1200px;
-      margin: auto;
+      margin: 0 auto;
       padding: 0 20px;
     }
 
     /* HERO */
     .hero {
-      padding: 80px 0;
+      padding: 60px 0;
+      display: flex;
+      justify-content: center;
       text-align: center;
     }
 
@@ -38,17 +37,17 @@
       justify-content: center;
       align-items: center;
       gap: 20px;
-      flex-wrap: wrap;
       margin-bottom: 20px;
+      flex-wrap: wrap;
     }
 
     .app-logo {
-      width: 110px;
-      height: 110px;
-      border-radius: 24px;
+      width: 120px;
+      height: 120px;
+      border-radius: 22px;
     }
 
-    h1 {
+    .hero-content h1 {
       font-size: 3.5rem;
       font-weight: 700;
       background: linear-gradient(135deg, #ffffff, #1d9bf0);
@@ -62,17 +61,18 @@
       margin-bottom: 30px;
     }
 
-    /* SOCIAL PROOF */
     .social-proof {
       display: flex;
       justify-content: center;
-      gap: 25px;
-      flex-wrap: wrap;
+      gap: 20px;
       margin-bottom: 40px;
+      flex-wrap: wrap;
     }
 
     .proof-item {
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     .proof-item .value {
@@ -83,54 +83,50 @@
     .stars { color: #1d9bf0; }
 
     .age-rating {
-      border: 1px solid #777;
-      padding: 3px 10px;
-      border-radius: 5px;
+      border: 1px solid #b0b0b0;
+      padding: 2px 8px;
+      border-radius: 4px;
       font-size: 0.9rem;
     }
 
-    /* CTA */
-    .cta {
-      margin: 40px 0 20px;
-    }
-
-    .download-text {
-      font-size: 1.4rem;
+    /* DOWNLOAD BUTTON (UNCHANGED STYLE) */
+    .download-btn {
+      display: inline-block;
+      background: linear-gradient(135deg, #1d9bf0, #4cafef);
+      color: white;
+      text-decoration: none;
+      padding: 18px 40px;
+      border-radius: 50px;
+      font-size: 1.2rem;
       font-weight: 600;
-      margin-bottom: 12px;
-      color: #ffffff;
+      box-shadow: 0 10px 30px rgba(29, 155, 240, 0.3);
+      transition: all 0.3s ease;
     }
 
-    .playstore-badge {
-      height: 64px;
-      transition: transform 0.3s ease;
+    .download-btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 15px 40px rgba(29, 155, 240, 0.5);
     }
 
-    .playstore-badge:hover {
-      transform: scale(1.05);
-    }
-
-    .cta-note {
-      margin-top: 12px;
-      font-size: 0.9rem;
-      color: #888;
-    }
-
-    /* SCREENSHOTS */
     .screenshots-title {
-      margin: 70px 0 20px;
+      margin: 60px 0 20px;
       font-size: 2rem;
       font-weight: 600;
     }
 
-    .swiper {
-      padding: 20px 0;
+    /* SWIPER */
+    .swiper { padding: 20px 0; }
+
+    .swiper-slide {
+      width: auto;
+      display: flex;
+      justify-content: center;
     }
 
     .swiper-slide img {
       width: 300px;
-      border-radius: 16px;
-      border: 2px solid rgba(255,255,255,0.08);
+      border-radius: 15px;
+      border: 2px solid rgba(255,255,255,0.1);
     }
 
     /* FEATURES */
@@ -141,13 +137,13 @@
 
     .features-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 30px;
     }
 
     .feature-card {
       background: rgba(255,255,255,0.05);
-      border: 1px solid rgba(29,155,240,0.25);
+      border: 1px solid rgba(29,155,240,0.2);
       border-radius: 20px;
       padding: 30px;
       text-align: center;
@@ -155,14 +151,14 @@
     }
 
     .feature-card span {
-      font-size: 2.8rem;
+      font-size: 3rem;
       display: block;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
 
     .feature-card h3 {
-      margin-bottom: 10px;
       color: #fff;
+      margin-bottom: 10px;
     }
 
     .feature-card p {
@@ -174,16 +170,16 @@
       padding: 40px 0;
       text-align: center;
       background: #050505;
-      border-top: 1px solid rgba(255,255,255,0.08);
-      color: #777;
+      border-top: 1px solid rgba(255,255,255,0.1);
+      color: #808080;
       font-size: 0.9rem;
     }
 
     /* MOBILE */
     @media (max-width: 768px) {
-      h1 { font-size: 2.6rem; }
-      .tagline { font-size: 1.1rem; }
-      .swiper-slide img { width: 85vw; }
+      .hero-content h1 { font-size: 2.8rem; }
+      .app-logo { width: 90px; height: 90px; }
+      .swiper-slide img { width: 90vw; }
     }
   </style>
 </head>
@@ -192,65 +188,57 @@
 
 <section class="hero">
   <div class="container">
-    <div class="title-container">
-      <img class="app-logo"
-        src="https://i.postimg.cc/hvqCC0pD/20250828-1527-Futuristic-Streaming-App-Icon-remix-01k3sckjvfe1r82p5ye68w01sp.png"
-        alt="Nix Swahili App Logo">
-      <h1>Nix Swahili</h1>
-    </div>
+    <div class="hero-content">
 
-    <p class="tagline">Stream Live TV • Sports • Movies • News</p>
-
-    <div class="social-proof">
-      <div class="proof-item">
-        <div class="value stars">★★★★☆</div>
-        <div>1.2M reviews</div>
+      <div class="title-container">
+        <img src="https://i.postimg.cc/hvqCC0pD/20250828-1527-Futuristic-Streaming-App-Icon-remix-01k3sckjvfe1r82p5ye68w01sp.png"
+             class="app-logo"
+             alt="Nix Swahili App Logo">
+        <h1>Nix Swahili</h1>
       </div>
-      <div class="proof-item">
-        <div class="value">10M+</div>
-        <div>Downloads</div>
-      </div>
-      <div class="proof-item">
-        <div class="age-rating">Rated 3+</div>
-        <div>Age Rating</div>
-      </div>
-    </div>
 
-    <!-- DOWNLOAD CTA -->
-    <div class="cta">
-      <div class="download-text">Download Nix Swahili</div>
+      <p class="tagline">Stream 1000+ Live Channels • Sports • News • Movies</p>
 
+      <div class="social-proof">
+        <div class="proof-item">
+          <span class="value stars">★★★★☆</span>
+          <span>1.2M reviews</span>
+        </div>
+        <div class="proof-item">
+          <span class="value">10M+</span>
+          <span>downloads</span>
+        </div>
+        <div class="proof-item">
+          <span class="age-rating">Rated 3+</span>
+          <span>Age Rating</span>
+        </div>
+      </div>
+
+      <!-- ORIGINAL DOWNLOAD BUTTON → PLAY STORE -->
       <a href="https://play.google.com/store/apps/details?id=com.nixswahili.app"
+         class="download-btn"
          target="_blank"
-         rel="noopener"
-         aria-label="Download Nix Swahili on Google Play">
-
-        <img class="playstore-badge"
-          src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png"
-          alt="Download on Google Play">
+         rel="noopener">
+        Download Now
       </a>
 
-      <div class="cta-note">
-        Official download via Google Play Store
-      </div>
-    </div>
+      <h2 class="screenshots-title">Screenshots</h2>
 
-    <h2 class="screenshots-title">App Screenshots</h2>
-
-    <!-- Screenshots -->
-    <div class="swiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="https://i.postimg.cc/HWQvrfkV/20250827-1131-Nix-Swahili-App-Mockup-remix-01k3pckfa0fqasmmctf0amfsaq.png">
+      <div class="swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="https://i.postimg.cc/HWQvrfkV/20250827-1131-Nix-Swahili-App-Mockup-remix-01k3pckfa0fqasmmctf0amfsaq.png">
+          </div>
+          <div class="swiper-slide">
+            <img src="https://i.postimg.cc/L5BxGZbz/20250827-1122-Sports-Streaming-Mockup-remix-01k3pc4bcyf3m9brwx09x3h9rj.png">
+          </div>
+          <div class="swiper-slide">
+            <img src="https://i.postimg.cc/nzd8gg9F/20250827-1101-Nix-Swahili-Sports-Mockup-remix-01k3paya2zfz4tg0gnf618swy4.png">
+          </div>
         </div>
-        <div class="swiper-slide">
-          <img src="https://i.postimg.cc/L5BxGZbz/20250827-1122-Sports-Streaming-Mockup-remix-01k3pc4bcyf3m9brwx09x3h9rj.png">
-        </div>
-        <div class="swiper-slide">
-          <img src="https://i.postimg.cc/nzd8gg9F/20250827-1101-Nix-Swahili-Sports-Mockup-remix-01k3paya2zfz4tg0gnf618swy4.png">
-        </div>
+        <div class="swiper-pagination"></div>
       </div>
-      <div class="swiper-pagination"></div>
+
     </div>
   </div>
 </section>
@@ -260,30 +248,30 @@
     <div class="features-grid">
       <div class="feature-card">
         <span>📺</span>
-        <h3>6000+ Live Channels</h3>
-        <p>Watch live television from around the world in HD.</p>
+        <h3>6000+ Live TV Channels</h3>
+        <p>Access thousands of live TV channels worldwide.</p>
       </div>
       <div class="feature-card">
         <span>⚽</span>
-        <h3>Live Sports</h3>
-        <p>Football, leagues, matches & highlights.</p>
+        <h3>Sports & News</h3>
+        <p>Watch live sports, music, and breaking news.</p>
       </div>
       <div class="feature-card">
         <span>🎬</span>
-        <h3>Movies & Series</h3>
-        <p>Stream premium entertainment anytime.</p>
+        <h3>Movies & Shows</h3>
+        <p>Enjoy premium entertainment on demand.</p>
       </div>
       <div class="feature-card">
         <span>✨</span>
         <h3>Easy to Use</h3>
-        <p>Fast, simple & optimized for Android.</p>
+        <p>Simple, fast, and optimized for Android.</p>
       </div>
     </div>
   </div>
 </section>
 
 <footer>
-  © 2025 Nix Swahili • Download on Google Play
+  © 2025 Nix Swahili Corp • Download on Google Play
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
